# anyrun-qalculate

./: .SRCINFO  .gitignore  .test-status.json  AGENTS.md  Cargo.toml  LICENSE  PKGBUILD  PLAN.md  README.md  TASK-build.ignore.md  VISION.md  build.rs
.github/workflows/: ci.yml  publish-aur.yml
src/: lib.rs  qalculate_bridge.cpp  qalculate_stub.cpp
tests/: gatekeeper.rs
