[package]
name = "anyrun-qalculate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "anyrun_qalculate"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun", package = "anyrun-plugin", tag = "v25.12.0" }
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cc = "1.1"
pkg-config = "0.3"
